Adjust Hotspots API
